--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -14,7 +14,7 @@
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>Description (for checkout page when promotion applied)</label>
-                    <textarea ng-model="promotion.description" name="description" required></textarea>
+                    <input ng-model="promotion.description" name="description" required/>
                     <div ng-messages="promotionForm.description.$error" role="alert">
                         <ng-message when="required">Please enter a description</ng-message>
                     </div>
