Highlight the selected campaign. Add space between groups of promo codes.

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -130,3 +130,6 @@ md-datepicker.ng-pristine .md-datepicker-invalid
   &.mobile-landscape
     height: 320px
     width: 640px
+
+md-list-item.selected
+  background-color: rgba(170, 170, 170, 0.1)
