Add support for double promo types

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -119,6 +119,7 @@ md-datepicker.ng-pristine .md-datepicker-invalid
   transition: all 1s 0s
   flex: none
   &.desktop
+    flex-basis: 100%
     height: 100%
     width: 100%
   &.mobile-portrait, &.mobile-landscape
