Updated to latest membership common so that I could leverage the new CampaignGroup and expand the number of filters for the campaigns. This means the business can have a view of Newspaper and Guardian Weekly promotions separate to just Digital Pack and Membership. There was a lot of collateral renaming .product to .campaignGroup. A few UI tweaks for fonts and icons. Still want to have a 'check all' button for Rate Plans and Countries, but will roll that into the next phase. Still need to add correct rate plan IDs for Guardian Weekly.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,11 +17,11 @@
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </head>
     <body ng-app="Promotions" layout="column">
-      <md-toolbar ng-class="environment.product">
+      <md-toolbar ng-class="[environment.campaignGroup, environment.stage.toLowerCase()]">
         <div class="md-toolbar-tools">
           <span environment-menu></span>
           <h2 class="md-clickable">
-            <span ui-sref="allPromotions.chooseCampaign">{{environment.product}} Promotions ({{environment.stage}})</span>
+            <span ui-sref="allPromotions.chooseCampaign">Guardian {{environment.campaignGroup}} Promotions ({{environment.stage}})</span>
           </h2>
           <span flex></span>
         </div>
