--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -42,13 +42,14 @@ md-tabs
   cursor: pointer
 
 md-toolbar
+  background-color: #00456e
   cursor: pointer
   transition: background-color 0.5s
   transition-delay: 0.2s
   text-transform: capitalize
 
-md-toolbar.digitalpack
-  background-color: #00456e
+md-toolbar.uat
+  background-color: #d61d00
 
 md-toolbar.membership
   background-color: rgb(187, 58, 127)
@@ -65,7 +66,7 @@ md-icon > a
 
 .landing-page-image
   background-color: #EEEEEE
-  background-position: middle middle;
+  background-position: center
   border: 1px solid #ccc
   background-size: cover
   margin-bottom: 20px
