--- a/frontend/src/templates/CampaignList.html
+++ b/frontend/src/templates/CampaignList.html
@@ -10,7 +10,7 @@
                 <div class="md-list-item-text" layout="column">
                     <div ui-sref="allPromotions.singleCampaign({code: campaign.code})">
                         <h3>{{ campaign.name }}</h3>
-                        <h4>{{ campaign.code }}</h4>
+                        <p>{{ campaign.code }}</p>
                     </div>
                     <md-icon class="md-secondary" md-font-set="material-icons" ui-sref="editCampaign({code: campaign.code})">mode_edit</md-icon>
                 </div>
