--- a/frontend/src/templates/GridImageSelector.html
+++ b/frontend/src/templates/GridImageSelector.html
@@ -1,4 +1,4 @@
-<modal show="show" product="product">
+<modal show="show" campaign-group="campaignGroup">
     <iframe ng-src="{{gridUrl}}" height="1200px" width="100%" style="border: none"></iframe>
 </modal>
 
