--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -42,11 +42,13 @@ md-tabs
   cursor: pointer
 
 md-toolbar
-  background-color: #00456e
   cursor: pointer
   transition: background-color 0.5s
   transition-delay: 0.2s
   text-transform: capitalize
+
+md-toolbar.prod
+  background-color: #00456e
 
 md-toolbar.uat
   background-color: #d61d00
