--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -24,7 +24,7 @@
                 <available-countries countries="promotion.appliesTo.countries"></available-countries>
                 <promotion-dates promotion="promotion"></promotion-dates>
                 <channel-codes codes="promotion.codes"></channel-codes>
-                <landing-page ng-if="campaignGroup === 'digitalpack'" promotion="promotion" campaign-group="campaignGroup"></landing-page>
+                <landing-page promotion="promotion" campaign-group="campaignGroup"></landing-page>
 
                 <section layout="row" layout-align="end center" layout-wrap>
                     <div layout="row" layout-align="center center">
