--- a/frontend/src/templates/PromotionType.html
+++ b/frontend/src/templates/PromotionType.html
@@ -13,8 +13,12 @@
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block" flex-gt-sm>
-                    <label>Terms and conditions</label>
+                    <label>Short terms and conditions</label>
                     <textarea ng-model="promotionType.termsAndConditions" delete-empty></textarea>
+                </md-input-container>
+                <md-input-container class="md-block" flex-gt-sm>
+                    <label>Long terms and conditions</label>
+                    <textarea ng-model="promotionType.legalTerms" delete-empty></textarea>
                 </md-input-container>
             </md-content>
         </md-tab>
