Show discounts in the UI

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -137,3 +137,6 @@ md-datepicker.ng-pristine .md-datepicker-invalid
 
 md-list-item.selected
   background-color: rgba(170, 170, 170, 0.1)
+
+s
+  color: #bbb
