--- a/frontend/src/templates/RatePlanList.html
+++ b/frontend/src/templates/RatePlanList.html
@@ -1,13 +1,21 @@
 <div layout="column" ng-repeat="(planKey, plans) in ratePlans" ng-show="planKey == campaignGroup">
   <h5>Rate plans</h5>
   <div>
-    <md-checkbox ng-model="ratePlanIds[plan.ratePlanId]" aria-label="{{plan.ratePlanName}}" ng-repeat="plan in plans"
-                 ng-change="ctrl.applyRatePlans(ratePlanIds)">
+    <md-checkbox ng-model="ratePlanIds[plan.ratePlanId]" aria-label="{{plan.ratePlanName}}"
+                 ng-repeat="plan in plans"
+                 ng-change="ctrl.applyRatePlans(ratePlanIds)"
+                 class="half-width"
+    >
       {{plan.ratePlanName}}
       <span ng-if="discount && plan.price">
-                <s>{{plan.price | currency:"£" }} </s> <md-icon md-font-set="material-icons">arrow_forward</md-icon>
-                <strong>{{plan.price - (plan.price*discount/100) | currency:"£" }} </strong>
-            </span>
+        <s>{{plan.price | currency:"£" }} </s>
+        <md-icon md-font-set="material-icons">arrow_forward</md-icon>
+        <strong>{{discountedPrice(plan) | currency:"£" }}</strong>
+        <span ng-show="showDiscountWarning(plan)">
+          <md-tooltip>The promotion is not a whole number of billing periods. The discount will be evenly spread over at least one complete billing period.</md-tooltip>
+          <md-icon md-font-set="material-icons">warning</md-icon>
+        </span>
+      </span>
     </md-checkbox>
   </div>
 </div>
