Remove the max-height from the menu
To prevent DEV environment from gettting cut off

--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -49,6 +49,10 @@ md-tabs {
   cursor: pointer;
 }
 
+.md-menu-content {
+  max-height: none;
+}
+
 md-toolbar {
   cursor: pointer;
   transition: background-color 0.5s;
