--- a/frontend/src/templates/EnvironmentMenu.html
+++ b/frontend/src/templates/EnvironmentMenu.html
@@ -2,7 +2,7 @@
     <md-button aria-label="Select environment" class="md-icon-button" ng-click="$mdOpenMenu($event)">
         <i class="material-icons">menu</i>
     </md-button>
-    <md-menu-content width="4">
+    <md-menu-content width="4" class="md-menu-content">
         <md-menu-item>
             <md-button ng-click="ctrl.setCampaignGroup('membership')">
                 <md-icon md-font-set="material-icons" md-menu-align-target>people</md-icon>
