Updates to the Promo Code tool to support the new Guardian Weekly rate plans, and also sort the list of Campaigns by the start date of the next (if there's one in future) or latest (if there are only past) promotion.

--- a/frontend/src/templates/CampaignList.html
+++ b/frontend/src/templates/CampaignList.html
@@ -11,6 +11,7 @@
                     <div ui-sref="allPromotions.singleCampaign({code: campaign.code})">
                         <h3>{{ campaign.name }}</h3>
                         <p>{{ campaign.code }}</p>
+                        <p ng-if="campaign.sortDate">Starts/Started: {{ campaign.sortDate | date:"dd MMM yy 'at' h:mm a"}}</p>
                     </div>
                     <md-icon class="md-secondary" md-font-set="material-icons" ui-sref="editCampaign({code: campaign.code})">mode_edit</md-icon>
                 </div>
