--- a/frontend/src/templates/PromotionList.html
+++ b/frontend/src/templates/PromotionList.html
@@ -11,7 +11,7 @@
                 </h4>
                 <p>
                     <md-icon md-font-set="material-icons">date_range</md-icon>
-                    {{ promotion.starts | date:"dd MMM yy" }} - {{ promotion.expires | date:"dd MMM yy" }}
+                    {{ promotion.starts | date:"dd MMM yy 'at' h:mm a" }} - {{ promotion.expires | date:"dd MMM yy 'at' h:mm a" }}
                 </p>
             </div>
             <md-divider></md-divider>
