Improve error handling so that a more specific error can be shown

--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -37,7 +37,7 @@
                 </section>
 
                 <div class="server-error" ng-if="serverErrors.length">
-                    Internal server error while saving promotion:
+                    There was an error while saving the promotion:
                     <ul><li ng-repeat="err in serverErrors">{{err}}</li></ul>
                     Please send this report to a developer.
                 </div>
