--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,18 +14,9 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </head>
-    <body ng-app="Promotions" layout="column">
-      <md-toolbar ng-class="[environment.campaignGroup, environment.stage.toLowerCase()]">
-        <div class="md-toolbar-tools">
-          <span environment-menu></span>
-          <h2 class="md-clickable">
-            <span ui-sref="allPromotions.chooseCampaign">Guardian {{environment.campaignGroup}} Promotions ({{environment.stage}})</span>
-          </h2>
-          <span flex></span>
-        </div>
-      </md-toolbar>
-      <md-content ui-view flex layout="column"></md-content>
+    <body>
+      <div id="content"></div>
+      <script src="/bundle.js" type="text/javascript"></script>
     </body>
 </html>
