--- a/frontend/src/templates/RatePlanList.html
+++ b/frontend/src/templates/RatePlanList.html
@@ -4,18 +4,21 @@
     <md-checkbox ng-model="ratePlanIds[plan.ratePlanId]" aria-label="{{plan.ratePlanName}}"
                  ng-repeat="plan in plans"
                  ng-change="ctrl.applyRatePlans(ratePlanIds)"
-                 class="half-width"
+                 class="full-width"0
     >
       {{plan.ratePlanName}}
-      <span ng-if="discount && plan.price">
-        <s>{{plan.price | currency:"£" }} </s>
+      <div
+              ng-if="discount && plan.priceSummary"
+              ng-repeat="price in plan.priceSummary"
+      >
+        <s>{{price.amount | currency: price.currency + " " }} </s>
         <md-icon md-font-set="material-icons">arrow_forward</md-icon>
-        <strong>{{discountedPrice(plan) | currency:"£" }}</strong>
+        <strong>{{discountedPrice(plan.period, price.amount) | currency: price.currency + " " }}</strong>
         <span ng-show="showDiscountWarning(plan)">
           <md-tooltip>The promotion is not a whole number of billing periods. The discount will be evenly spread over at least one complete billing period.</md-tooltip>
           <md-icon md-font-set="material-icons">warning</md-icon>
         </span>
-      </span>
+      </div>
     </md-checkbox>
   </div>
 </div>
