Don't show the preview panel as it doesn't work

--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -49,5 +49,5 @@
             </div>
         </form>
     </div>
-    <preview-promotion ng-show="campaignGroup !== 'membership' && promotion.landingPage !== undefined" flex layout="column" promotion="promotion" validity="promotionForm.$valid"></preview-promotion>
+    <preview-promotion ng-show="false" flex layout="column" promotion="promotion" validity="promotionForm.$valid"></preview-promotion>
 </div>
