regenrate promo codes

--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -28,7 +28,7 @@
                 </rate-plan-list>
                 <available-countries countries="promotion.appliesTo.countries"></available-countries>
                 <promotion-dates promotion="promotion"></promotion-dates>
-                <channel-codes codes="promotion.codes"></channel-codes>
+                <channel-codes codes="promotion.codes" regenerate-codes="createPromotionCopy"></channel-codes>
                 <landing-page promotion="promotion" campaign-group="campaignGroup"></landing-page>
 
                 <section layout="row" layout-align="end center" layout-wrap>
