--- a/frontend/src/templates/EnvironmentMenu.html
+++ b/frontend/src/templates/EnvironmentMenu.html
@@ -35,15 +35,9 @@
             </md-button>
         </md-menu-item>
         <md-menu-item>
-            <md-button ng-click="ctrl.setStage('UAT')">
-                <md-icon md-font-set="material-icons" md-menu-align-target>bug_report</md-icon>
-                UAT
-            </md-button>
-        </md-menu-item>
-        <md-menu-item>
-            <md-button ng-click="ctrl.setStage('DEV')">
+            <md-button ng-click="ctrl.setStage('CODE')">
                 <md-icon md-font-set="material-icons" md-menu-align-target>build</md-icon>
-                DEV
+                CODE
             </md-button>
         </md-menu-item>
     </md-menu-content>
