--- a/frontend/src/templates/EnvironmentMenu.html
+++ b/frontend/src/templates/EnvironmentMenu.html
@@ -1,5 +1,5 @@
 <md-menu>
-    <md-button aria-label="Select environment" class="md-icon-button" ng-click="$mdOpenMenu($event)">
+    <md-button aria-label="Select environment" class="md-icon-button" ng-click="$mdMenu.open($event)">
         <i class="material-icons">menu</i>
     </md-button>
     <md-menu-content width="4" class="md-menu-content">
