--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,13 +2,14 @@
  * This template takes a single argument, a String containing a
  * message to display.
  *@
-@(message: String)
+@import wiring.AppComponents.Stage
+@(message: String, stage: Stage)
 
 @*
  * Call the `main` template with two arguments. The first
  * argument is a `String` with the title of the page, the second
  * argument is an `Html` object containing the body of the page.
  *@
-@main("Membership/Subscription Promotions Tools") {
+@main("Membership/Subscription Promotions Tools", stage) {
 
 }
