Fixing bug where a new campaign could not be created

--- a/frontend/src/templates/CampaignList.html
+++ b/frontend/src/templates/CampaignList.html
@@ -4,7 +4,7 @@
     <md-content layout="column" flex="33" style="border-right: 1px solid #BBB" layout-align=" stretch" md-scroll-y ng-cloak>
         <md-list>
             <md-subheader>
-                Campaigns <md-icon class="add-button" md-font-set="material-icons" ui-sref="editCampaign">add</md-icon>
+                Campaigns <md-icon class="add-button" md-font-set="material-icons" ui-sref="createCampaign">add</md-icon>
             </md-subheader>
             <md-list-item ui-sref-active="selected" class="md-3-line md-clickable" ng-repeat="campaign in campaigns" md-ink-ripple="#AAAAAA">
                 <div class="md-list-item-text" layout="column">
